[package]
name = "nitro-enclaves"
authors = ["Tyler Fanelli <tfanelli@redhat.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2021"
description = "Library for AWS Nitro Enclaves"

[dependencies]
bitflags = "2.9.0"
libc = "0.2.171"
nix = { version = "0.26.0", features = ["ioctl"] }
rand = "0.9.0"
