[package]
name = "nitro-enclaves"
version = "0.2.0"
authors = ["The VirTEE Project Developers <virtee-security@redhat.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/virtee/nitro-enclaves"
description = "Library for AWS Nitro Enclaves"
readme = "README.md"
keywords = ["aws", "nitro", "enclaves"]
exclude = [".gitignore", ".github/*"]

[dependencies]
bitflags = "2.9.0"
libc = "0.2.171"
nix = { version = "0.26.0", features = ["ioctl", "poll"] }
rand = "0.9.0"
vsock = "0.5.1"
